...
                                <EditText

                                    android:id="@+id/id_number_surveyor"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
...

                                <AutoCompleteTextView
                                    android:id="@+id/name_of_survayor"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
...
                                <AutoCompleteTextView

                                    android:id="@+id/date_of_survey"
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"
...

                                <EditText
                                    android:id="@+id/id_code"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
...
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignBottom="@+id/Survay_district"
                                    android:layout_alignParentLeft="true"
                                    android:layout_alignParentStart="true"
...
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignBottom="@+id/Survay_municipality"
                                    android:layout_alignParentLeft="true"
                                    android:layout_alignParentStart="true"
...

                                <AutoCompleteTextView
                                    android:id="@+id/Survay_ward"
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"
...

                                <AutoCompleteTextView
                                    android:id="@+id/Survay_address"
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"
...

                            <CheckBox
                                android:id="@+id/single_family_detached"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                            <CheckBox
                                android:id="@+id/multy_family_house"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                            <CheckBox
                                android:id="@+id/apartment_block"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                            <CheckBox
                                android:id="@+id/mixed_use_block"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                            <CheckBox
                                android:id="@+id/number_of_floors"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                                <Button
                                    android:id="@+id/house_GpsStart"
                                    android:layout_width="212dp"
                                    android:layout_height="wrap_content"
...

                                <ImageButton
                                    android:id="@+id/house_photo_site"
                                    android:layout_width="40dp"
                                    android:layout_height="40dp"
...

                                    <AutoCompleteTextView
                                        android:id="@+id/Respondent_age"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
...

                                    <RadioButton
                                        android:id="@+id/male"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
...

                                    <RadioButton
                                        android:id="@+id/female"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
...

                                    <AutoCompleteTextView
                                        android:id="@+id/Respondent_email"
                                        android:layout_width="fill_parent"
                                        android:layout_height="wrap_content"
...
                                    android:layout_width="40dp"
                                    android:layout_height="wrap_content"
                                    android:layout_toLeftOf="@+id/husband_no"
                                    android:text="-"
                                    android:textSize="23dp" />
...
                                    android:layout_width="40dp"
                                    android:layout_height="wrap_content"
                                    android:layout_toLeftOf="@+id/wife_no"
                                    android:text="-"
                                    android:textSize="23dp" />
...
                                    android:layout_width="40dp"
                                    android:layout_height="wrap_content"
                                    android:layout_toLeftOf="@+id/children_no"
                                    android:text="-"
                                    android:textSize="23dp" />
...
                                    android:layout_width="40dp"
                                    android:layout_height="wrap_content"
                                    android:layout_toLeftOf="@+id/relatives_no"
                                    android:text="-"
                                    android:textSize="23dp" />
...

                                <TextView
                                    android:id="@+id/others"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
...
                                    android:layout_width="40dp"
                                    android:layout_height="wrap_content"
                                    android:layout_toLeftOf="@+id/others_no"
                                    android:text="-"
                                    android:textSize="23dp" />
...

                                <AutoCompleteTextView
                                    android:id="@+id/Survay_Total_family_member"
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"
...
                                    android:layout_width="40dp"
                                    android:layout_height="wrap_content"
                                    android:layout_toLeftOf="@+id/Working_husband_no"
                                    android:text="-"
                                    android:textSize="23dp" />
...
                                    android:layout_width="40dp"
                                    android:layout_height="wrap_content"
