<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="233dp"
        android:layout_marginTop="10dp"
        android:layout_margin="30dp"
        android:background="#55909090">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/view"
            >
            <EditText
                android:id="@+id/input_tableName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Form Name"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/view2"
            >
            <EditText
                android:id="@+id/input_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Date"
                android:inputType="datetime"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="Save Data"
            android:textColor="#FFFFFF"
            android:background="#1c75bf"
            android:layout_below="@+id/view2"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</LinearLayout>