...
            <Button
                android:id="@+id/button_defaultDialog"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                android:text="OK"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />

        </LinearLayout>
    </ScrollView>

...
