...
        android:layout_height="70dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Yes"
            android:id="@+id/alertButtonYes"
            android:textColor="#ffffff"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="15dp"
            android:background="@color/primary"
            android:layout_weight="1"
...
